--- a/PTT/res/values/strings.xml
+++ b/PTT/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_section2">Explore</string>
     <string name="title_section3">Contact</string>
     <string name="action_settings">Settings</string>
+    <string name="action_add_new_task">Add task</string>
     <string name="action_overflow">Overflow</string>
     <string name="action_about">About</string>
     <string name="action_search">Search</string>
@@ -134,5 +135,31 @@
     <string name="result_uri">Found URL</string>
     <string name="result_wifi">Found WLAN Configuration</string>
     <string name="wifi_changing_network">Requesting connection to network\u2026</string>
+    <string name="title_activity_task_mornitor">TaskMornitor</string>
+    <string name="button_remove_task">Remove task</string>
+    <string name="title_activity_display_task">DisplayTask</string>
 
+    <string name="tmp_task_title">TV/Audio/Video > Home Theatre > Home Theatre System > HW-H7501 (Primary) </string>
+    <string name="tmp_task_work_type">Work Type : Insert </string>
+    <string name="tmp_task_job_id">Job ID : 15962752 </string>
+    <string name="tmp_task_preview_link">Preview Link : bit.ly/gTR1y </string>
+    <string name="tmp_attachement_name">translation_result.xlsx</string>
+    <string name="task_log">LOG</string>
+    <string name="task_log_comment">Lin Na Fan --- SEC.Web Production Support : Submit task.</string>
+    <string name="task_log_time">Sep 24, 2014 10:30 HKT [02:30 GMT]</string>
+    <string name="task_log_comment1">Nuo Fu --- SEC.Web Production Lead : pls assist,  not need to update gallery </string>
+    <string name="task_log_time1">Sep 24, 2014 13:11 HKT [05:11 GMT]</string>
+    <string name="task_log_comment2">Xu Lin OPR Fan --- SEC.Web Builder : done </string>
+    <string name="task_log_time2">Sep 25, 2014 10:29 HKT [02:29 GMT]</string>
+    <string name="task_log_comment3">Xu Lin OPR Fan --- SEC.Web Builder : Completed quality self-assessment</string>
+    <string name="task_log_time3">Sep 25, 2014 10:36 HKT [02:36 GMT]</string>
+    <string name="task_log_comment4">Huan Liu --- SEC.QA Reviewer : QA approved,pls review,thanks.</string>
+    <string name="task_log_time4">Sep 26, 2014 10:01 HKT [02:01 GMT]</string>
+    <string name="task_log_comment5">Jia Sheng Yin --- SEC.Web Production Lead : Huan Liu has been checked here!</string>
+    <string name="task_log_time5">Sep 26, 2014 18:15 HKT [10:15 GMT]</string>
+    <string name="progress_text">0%</string>
+    <string name="button_task_reject">Reject</string>
+    <string name="button_task_approve">Approve</string>
+    <string name="button_task_preview">Preview</string>
+    <string name="msg_task_comments">Comments?</string>
 </resources>
