--- a/PTT/res/values/strings.xml
+++ b/PTT/res/values/strings.xml
@@ -439,7 +439,7 @@
     <string name="low_storage_warning">手机（或SD卡）存储空间已满，手机QQ的部分功能可能会无法使用，请及时清理</string>
     <!--  string name="app_name">XMPP</string-->
     <string name="group_online">在线好友</string>
-    <string name="run_bg_ticker">XMPP正在后台运行</string>
+    <string name="run_bg_ticker">PTT is running</string>
     <string name="failedconnection">网络连接不可用，请检查网络设置。</string>
     <string name="yes">是</string>
     <string name="no">否</string>
